changed image height

--- a/index.html
+++ b/index.html
@@ -1,16 +1,52 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<html>
-    <head>
-        <title>Oraan Levi's Profolio!</title>
-        <link rel="stylesheet" href="style.css">
+<head>
+  <title>Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  
+  
+</head>
 
-    </head>
+<body>
+  <header>
+    <h1 style="text-align:center"> Oraan Levi's Portfolio </h1>
+  </header>
 
-    <body>
 
-        <h1>Profolio </h1>
-        <p> this is the first file in this repo.</p>
-        <p> another line in this file</p>
-    </body>
+  <main>
+    <section>
+        <h2> About Me</h2>
+        <figure>
+            <img src="./UCLA-VIRT-FSF-PT-08-2022-U-LOLC/Profile Picture.JPG" alt="picture of the developer with text reading 200 width 200 height"/>
+            <figcaption> Profile Picture</figcaption>
+     </figure>
+     <p class="highlighted-text"> Hello, welcome to my profile page! A little bit about me is that I am a 21 years old  </p>
+    </section>
+
+    <section id="contact-selection">
+        <h2> Ways to Contact </h2>
+        <ul class=" highlighted-text">
+            <li> Email: <a href="#">oraanlevi1@gmail.com</a></li>
+            <li>Phone Number: <a href= "#"> 310-710-6230</a></li>
+            <li> GitHub: <a href= "#"> Oraan Levi</a></li>
+            </li>
+        </ul>
+
+
+
+
+
+
+
+
+
+
+    </section>
+  </main>
+  
+
+</body>
 </html>
